add_subdirectory(ewald)
add_subdirectory(pickle_potential)
add_subdirectory(pi_water)
add_subdirectory(system_test)
add_subdirectory(tabulated)
add_subdirectory(topology_manager)
add_subdirectory(chemical_reactions)
add_subdirectory(Array4DTest)
add_subdirectory(fixed_list_types_test)
add_subdirectory(minimize_energy)
add_subdirectory(particle_region_test)